--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 
 <h1>{{title}}</h1>
+<h3>{{status}}</h3>
 <table border="1" cellpadding="10">
     <thead>
     <tr>
@@ -14,6 +15,7 @@
         <th>Vencimento</th>
         <th>Nome</th>
         <th>Valor</th>
+        <th>Paga?</th>
     </tr>
     </thead>
     <tbody>
@@ -22,6 +24,7 @@
         <td>{{o.date_due}}</td>
         <td>{{o.name}}</td>
         <td>{{o.value}}</td>
+        <td>{{o.done}}</td>
 
     </tr>
 
