--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <h1>{{title}}</h1>
 <h3>{{status}}</h3>
+<nav>
+    <ul>
+        <li v-for="o in menus"><a href="javascript:void(0)" @click="showView(o.id)">{{o.name}}</a></li>
+    </ul>
+</nav>
 <table border="1" cellpadding="10">
     <thead>
     <tr>
