--- a/index.html
+++ b/index.html
@@ -13,28 +13,35 @@
         <li v-for="o in menus"><a href="javascript:void(0)" @click="showView(o.id)">{{o.name}}</a></li>
     </ul>
 </nav>
-<table border="1" cellpadding="10">
-    <thead>
-    <tr>
-        <th>#</th>
-        <th>Vencimento</th>
-        <th>Nome</th>
-        <th>Valor</th>
-        <th>Paga?</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr v-for="(index, o) in bills">
-        <td>{{index + 1}}</td>
-        <td>{{o.date_due}}</td>
-        <td>{{o.name}}</td>
-        <td>{{o.value}}</td>
-        <td>{{o.done}}</td>
+<div v-if="activedView == 0">
+    <table border="1" cellpadding="10">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Vencimento</th>
+            <th>Nome</th>
+            <th>Valor</th>
+            <th>Paga?</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr v-for="(index, o) in bills">
+            <td>{{index + 1}}</td>
+            <td>{{o.date_due}}</td>
+            <td>{{o.name}}</td>
+            <td>{{o.value}}</td>
+            <td>{{o.done}}</td>
 
-    </tr>
+        </tr>
 
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
+<div v-if="activedView == 1">
+    <form action="" name="form">
+        Test: <input type="text">
+    </form>
+</div>
 <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
 <script type="text/javascript" src="app.js"></script>
 
