--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 </div>
 <div v-if="activedView == 1">
     <form action="" name="form">
-        Test: <input type="text">
+        Test: <input type="text" v-model="test">
+        {{ test }}
     </form>
 </div>
 <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
