Criando conta a pagar

--- a/index.html
+++ b/index.html
@@ -39,8 +39,24 @@
 </div>
 <div v-if="activedView == 1">
     <form action="" name="form">
-        Test: <input type="text" v-model="test">
-        {{ test }}
+
+        <label>Vencimento: </label>
+        <input type="text" v-model="bill.date_due">
+        <br><br>
+
+        <label>Nome: </label>
+        <select name="" id="" v-model="bill.name">
+            <option v-for="o in names" value="{{o}}">
+                {{o}}
+            </option>
+        </select>
+        <br><br>
+
+        <label>Valor: </label>
+        <input type="text" v-model="bill.value">
+        <br><br>
+
+        <input type="button" value="Enviar" @click="submit">
     </form>
 </div>
 <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
